--- a/sigal/themes/galleria-mrdon/templates/album_items.html
+++ b/sigal/themes/galleria-mrdon/templates/album_items.html
@@ -22,6 +22,7 @@
     <script src="{{ theme.url }}/galleria.min.js"></script>
     <script src="{{ theme.url }}/themes/{{ settings.galleria_theme }}/galleria.{{ settings.galleria_theme }}.min.js"></script>
     <script src="{{ theme.url }}/plugins/history/galleria.history.min.js"></script>
+    <script src="{{ theme.url }}/pinch-zoom.js"></script>
     <script>
     var data = [
       {% for media in album.medias -%}
@@ -77,6 +78,13 @@
         thumbnails: "lazy"
     });
     Galleria.run("#gallery", {dataSource: data});
+
+    // Initialize pinch-to-zoom for touch devices
+    Galleria.ready(function() {
+        if (typeof initGalleriaPinchZoom === 'function') {
+            initGalleriaPinchZoom(this);
+        }
+    });
 
     </script>
   {% endif %}
